--- a/servicos.html
+++ b/servicos.html
@@ -254,7 +254,48 @@
             </div>
         </div>
     </div>
-    
+    <div class="container-fluid py-5" id="cabeca">
+        <div class="container py-5">
+            <div class="row align-items-center">
+                <div class="col-lg-3 pb-5 pb-lg-0">
+                    <img class="img-fluid w-100" src="img/relaxx.jpg" alt="">
+                </div>
+                <div class="col-lg-9">
+                    <h1 class="mb-4">Massagem para Dor de cabeça(cefaleia/enxaqueca)</h1>
+                    <div class="pl-4 border-left border-primary">Sofrer de dores de cabeça pode ser extremamente debilitante e afetar sua qualidade de vida. A massagem para dor de cabeça é projetada para proporcionar relaxamento muscular, reduzir a tensão acumulada nos músculos do pescoço, ombros e cabeça, que muitas vezes é a causa subjacente da dor. Além disso, a massagem promove um estado de relaxamento que ajuda a prevenir futuras dores, aumenta o fluxo sanguíneo para o cérebro, ajudando a reduzir a dor e melhorar a clareza mental, e alivia o estresse acumulado, um dos principais desencadeadores de dores de cabeça.<p>Gostaria de mais informações? Entre em contato clicando no botão abaixo:</p>
+                    <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Massagem%20para%20Dor%20de%20Cabeça." class="btn btn-primary mt-2" target="_blank">Mais informações</a></div>
+                       </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid py-5" id="dtm">
+        <div class="container py-5">
+            <div class="row align-items-center">
+                <div class="col-lg-3 pb-5 pb-lg-0">
+                    <img class="img-fluid w-100" src="img/relaxx.jpg" alt="">
+                </div>
+                <div class="col-lg-9">
+                    <h1 class="mb-4">Massagem para Disfunção temporomandibular</h1>
+                    <div class="pl-4 border-left border-primary">A massagem para Disfunção Temporomandibular (DTM) é um tratamento especializado que alivia a dor e a tensão na mandíbula, pescoço e ombros, melhora a mobilidade da articulação temporomandibular e reduz dores de cabeça associadas. Utilizando técnicas de massagem terapêutica, mobilização articular e liberação miofascial, esse serviço é ideal para quem sofre de DTM ou sente desconforto na região, proporcionando bem-estar e prevenindo o desgaste articular. Agende sua sessão e melhore sua qualidade de vida.<p>Gostaria de mais informações? Entre em contato clicando no botão abaixo:</p>
+                    <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Massagem%20para%20DTM." class="btn btn-primary mt-2" target="_blank">Mais informações</a></div>
+                       </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid py-5" id="fl">
+        <div class="container py-5">
+            <div class="row align-items-center">
+                <div class="col-lg-3 pb-5 pb-lg-0">
+                    <img class="img-fluid w-100" src="img/dr.jpg" alt="">
+                </div>
+                <div class="col-lg-9">
+                    <h1 class="mb-4">Massagem Facial(Lifting Facial)</h1>
+                    <div class="pl-4 border-left border-primary">A Massagem Facial (Lifting Facial) é a escolha ideal para quem deseja rejuvenescer e firmar a pele do rosto de maneira natural. Com técnicas que proporcionam um lifting imediato, essa massagem suaviza linhas de expressão, melhora a circulação e desintoxica a pele, deixando-a mais luminosa e radiante. Além dos benefícios estéticos, é um tratamento que promove relaxamento profundo, oferecendo um momento de autocuidado e bem-estar. Experimente e redescubra a vitalidade da sua pele!<p>Gostaria de mais informações? Entre em contato clicando no botão abaixo:</p>
+                    <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Massagem%20Facial." class="btn btn-primary mt-2" target="_blank">Mais informações</a></div>
+                       </div>
+            </div>
+        </div>
+    </div>
     
     <div class="container-fluid py-5" id="dl">
         <div class="container py-5">
