--- a/preco.html
+++ b/preco.html
@@ -226,6 +226,39 @@
                        </div>
             </div>
         </div>
+        <div class="container py-5">
+            <div class="row align-items-center">
+                <div class="col-lg-3 pb-3 pb-lg-0 text-center">
+                    <img class="img-fluid w-100" src="img/relaxx.jpg" alt="">
+                </div>
+                <div class="col-lg-5">
+                    <h4 class="mb-4">Massagem para Dor de Cabeça</h4>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$150,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20para%20Dor%20de%20Cabeça." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                       </div>
+            </div>
+        </div>
+        <div class="container py-5">
+            <div class="row align-items-center">
+                <div class="col-lg-3 pb-3 pb-lg-0 text-center">
+                    <img class="img-fluid w-100" src="img/relaxx.jpg" alt="">
+                </div>
+                <div class="col-lg-5">
+                    <h4 class="mb-4">Massagem para DTM</h4>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$150,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20para%20DTM." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                       </div>
+            </div>
+        </div>
+        <div class="container py-5">
+            <div class="row align-items-center">
+                <div class="col-lg-3 pb-3 pb-lg-0 text-center">
+                    <img class="img-fluid w-100" src="img/relaxx.jpg" alt="">
+                </div>
+                <div class="col-lg-5">
+                    <h4 class="mb-4">Massagem Facial(Lifting Facial)</h4>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$150,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Facial." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                       </div>
+            </div>
+        </div>
     
         <div class="container py-5">
             <div class="row align-items-center">
