--- a/preco.html
+++ b/preco.html
@@ -229,7 +229,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-3 pb-lg-0 text-center">
-                    <img class="img-fluid w-100" src="img/relaxx.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/cabeca.png" alt="">
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Massagem para Dor de Cabeça</h4>
@@ -240,7 +240,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-3 pb-lg-0 text-center">
-                    <img class="img-fluid w-100" src="img/relaxx.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/dtm.png" alt="">
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Massagem para DTM</h4>
@@ -251,7 +251,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-3 pb-lg-0 text-center">
-                    <img class="img-fluid w-100" src="img/relaxx.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/facial.png" alt="">
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Massagem Facial(Lifting Facial)</h4>
