--- a/servicos.html
+++ b/servicos.html
@@ -258,7 +258,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/relaxx.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/cabeca.png" alt="">
                 </div>
                 <div class="col-lg-9">
                     <h1 class="mb-4">Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</h1>
@@ -272,7 +272,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/relaxx.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/dtm.png" alt="">
                 </div>
                 <div class="col-lg-9">
                     <h1 class="mb-4">Massagem para Disfunção Temporomandibular</h1>
@@ -286,7 +286,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/dr.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/facial.png" alt="">
                 </div>
                 <div class="col-lg-9">
                     <h1 class="mb-4">Massagem Facial (Lifting Facial)</h1>
