--- a/sobre.html
+++ b/sobre.html
@@ -115,8 +115,8 @@
                         <div class="dropdown-menu rounded-0 m-0">
                             <a href="servicos#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a><!-- <a href="servicos#qm" class="dropdown-item">Quick Massage</a> -->
                             <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
-                            <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a> <a href="servicos#cabeca" class="dropdown-item">Massagem para Dor de cabeça(cefaleia/enxaqueca)</a> <a href="servicos#dtm" class="dropdown-item">Massagem para DTM</a>
-                            <a href="servicos#fl" class="dropdown-item">Massagem Facial(Lifting Facial)</a><a href="servicos#dl" class="dropdown-item">Drenagem Linfática</a>
+                            <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a> <a href="servicos#cabeca" class="dropdown-item">Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a href="servicos#dtm" class="dropdown-item">Massagem para DTM</a>
+                            <a href="servicos#fl" class="dropdown-item">Massagem Facial (Lifting Facial)</a><a href="servicos#dl" class="dropdown-item">Drenagem Linfática</a>
                             <a href="servicos#pq" class="dropdown-item">Pedras quentes</a>
                             <a href="servicos#vent" class="dropdown-item">Ventosaterapia</a>
                             <a href="servicos#ROLF" class="dropdown-item">Liberação miofascial (Conceito ROLF)</a><a href="servicos#auric" class="dropdown-item">Auriculoterapia</a>
