--- a/preco.html
+++ b/preco.html
@@ -317,7 +317,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Auriculoterapia</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 15-30 min<br><strong>Preço:</strong> R$100,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Auriculoterapia." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 30 min<br><strong>Preço:</strong> R$100,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Auriculoterapia." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
