--- a/preco.html
+++ b/preco.html
@@ -132,7 +132,7 @@
                         <div class="dropdown-menu rounded-0 m-0">
                             <a href="servicos#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a><!-- <a href="servicos#qm" class="dropdown-item">Quick Massage</a> -->
                             <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
-                            <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a> <a href="servicos#cabeca" class="dropdown-item">Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a href="servicos#dtm" class="dropdown-item">Massagem para DTM</a>
+                            <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a> <a href="servicos#cabeca" class="dropdown-item">Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a href="servicos#dtm" class="dropdown-item">Massagem para Disfunção Temporomandibular</a>
                             <a href="servicos#fl" class="dropdown-item">Massagem Facial (Lifting Facial)</a><a href="servicos#dl" class="dropdown-item">Drenagem Linfática</a>
                             <a href="servicos#pq" class="dropdown-item">Pedras quentes</a>
                             <a href="servicos#vent" class="dropdown-item">Ventosaterapia</a>
@@ -243,7 +243,7 @@
                     <img class="img-fluid w-100" src="img/dtm.png" alt="">
                 </div>
                 <div class="col-lg-5">
-                    <h4 class="mb-4">Massagem para DTM</h4>
+                    <h4 class="mb-4">Massagem para Disfunção Temporomandibular</h4>
                     <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$150,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20para%20DTM." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
