--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
    <meta content="Stress? Dor? Cansaço? Tensão? Ansiedade? Venha aproveitar os benefícios das nossas terapias, estamos preparados para lhe atender de acordo com suas preferências e necessidades..." name="description">
 
-    <!-- Favicon -->
+    <!-- Favicon br.freepik.com -->
     <link href="img/favicon.png" rel="icon">
 
     <!-- Google Web Fonts -->
