--- a/sobre.html
+++ b/sobre.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LGPB3NXZ45"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LGPB3NXZ45');
+</script>
     <link rel="icon" href="img/favicon.png">
     <meta charset="utf-8">
     <title>Dr. Will - Fisioterapia e massoterapia - Tratamento de dor, promoção de saúde e bem-estar </title>
