--- a/servicos.html
+++ b/servicos.html
@@ -408,7 +408,7 @@
                         <img alt="" src="img/ff1.png" class="img-fluid w-100 lfooter mb-3">
                     </a>
                   <p>Tratamento personalizado com seriedade e dedicação para o seu bem-estar. <p>Experimente nossas terapias e descubra os benefícios para relaxamento e saúde.</p><p>
-                  <p><i class="fa fa-map-marker-alt mr-2"></i>São Caetano do Sul, SP</p>
+                  <p><i class="fa fa-map-marker-alt mr-2"></i>São Caetano do Sul (SCS), SP</p>
                   <p><i class="fa fa-phone-alt mr-2"></i>011 974237159</p>
                   <p><i class="fa fa-envelope mr-2"></i>contato@drwill.com.br</p>
                     <div class="d-flex justify-content-start mt-4">
@@ -436,7 +436,7 @@
                             <div class="d-flex flex-column justify-content-start">
                                 <a class="text-white-50 mb-2" href="#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Deep Tissue)</a><a class="text-white-50 mb-2" href="#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a>
                                 <a class="text-white-50 mb-2" href="#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
-                                <a class="text-white-50 mb-2" href="#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
+                                <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a> <a class="text-white-50 mb-2" href="servicos#cabeca"><i class="fa fa-angle-right mr-2"></i>Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a class="text-white-50 mb-2" href="servicos#dtm"><i class="fa fa-angle-right mr-2"></i>Massagem para Disfunção Temporomandibular</a> <a class="text-white-50 mb-2" href="servicos#fl"><i class="fa fa-angle-right mr-2"></i>Massagem Facial (Lifting Facial)</a>
                                 <a class="text-white-50 mb-2" href="#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
                                 <a class="text-white-50 mb-2" href="#pq"><i class="fa fa-angle-right mr-2"></i>Pedras quentes</a>
                                 <a class="text-white-50 mb-2" href="#vent"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
