--- a/contato.html
+++ b/contato.html
@@ -13,7 +13,7 @@
 </script>
     <link rel="icon" href="img/favicon.png">
     <meta charset="utf-8">
-    <title>Dr. Will - Fisioterapia e massoterapia - Tratamento de dor, promoção de saúde e bem-estar </title>
+    <title>Dr. Will - Massoterapia em sala e domiciliar, Fisioterapia - Tratamento de dor, promoção de saúde e bem-estar </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     
    <meta content="Stress? Dor? Cansaço? Tensão? Ansiedade? Venha aproveitar os benefícios das nossas terapias, estamos preparados para lhe atender de acordo com suas preferências e necessidades..." name="description">
