--- a/tree.html
+++ b/tree.html
@@ -10,7 +10,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Will - Fisioterapia e massoterapia - Tratamento de dor, promoção de saúde e bem-estar </title>
+    <title>Dr. Will - Massoterapia em sala e domiciliar, Fisioterapia - Tratamento de dor, promoção de saúde e bem-estar </title>
     <meta name="description" content="List all your links on one website.">
     <meta property="og:title" content="links-website" />
     <meta property="og:description" content="List all your links on one website." />
@@ -29,8 +29,8 @@ https://github.com/ardacarofficial/links-website is open source project.
         <img src="img/treef.jpg" alt="Logo" />
       </div>
       <div class="header_text flex_column_center treemtxt">
-        <h1 class="header_h_item">William Otavio Souto</h1>
-        <h2 class="header_h_item">Fisioterapia e massoterapia</h2>
+        <h1 class="header_h_item">Dr. Will</h1>
+        <h2 class="header_h_item">Massoterapia em sala e domiciliar - Fisioterapia</h2>
       </div>
     <!-- Logo, Title and Description Codes End -->  
 
@@ -122,7 +122,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item">
-          <p>Fisioterapia, tratamento da dor, Massagem para dor (Clínica), Massagem Relaxante, Massagem Sueca(Clássica), Liberação miofascial(Deep Tissue), Treinamento funcional, Drenagem linfática, Massagem com pedras quentes, Ventosaterapia, Liberação miofascial(Conceito ROLF), auriculoterapia e Pilates.</p>
+          <p>Estamos preparados para lhe atender de acordo com suas preferências e necessidades, confira alguns de nosso serviços:<br>Fisioterapia, tratamento da dor, Massagem para dor (Clínica), Massagem Relaxante, Massagem Sueca(Clássica), Liberação miofascial(Deep Tissue), Massagem para Dor de cabeça(Cefaleia - Enxaqueca), Massagem para Disfunção Temporomandibular, Massagem Facial (Lifting Facial), Drenagem linfática, Massagem com pedras quentes, Ventosaterapia, Liberação miofascial(Conceito ROLF).</p>
         </div>
         <!-- Menu Small Item 
         <div class="main_small_button_list">
