--- a/preco.html
+++ b/preco.html
@@ -355,7 +355,7 @@
                     <a href="/" class="navbar-brand">
                         <img alt="" src="img/ff1.png" class="img-fluid w-100 lfooter mb-3">
                     </a>
-                  <p>Tratamento personalizado com seriedade e dedicação para o seu bem-estar. <p>Experimente nossas terapias e descubra os benefícios para relaxamento e saúde.</p><p>
+                  <p>Tratamento personalizado com seriedade e dedicação, seja atendido no seu lar ou em sala. <p>Experimente nossas terapias e descubra os benefícios para relaxamento e saúde.</p><p>
                   <p><i class="fa fa-map-marker-alt mr-2"></i>São Caetano do Sul (SCS), SP</p>
                   <p><i class="fa fa-phone-alt mr-2"></i>011 974237159</p>
                   <p><i class="fa fa-envelope mr-2"></i>contato@drwill.com.br</p>
